fix(table-head): z-index increase

--- a/src/components/reusable/table/table-head.scss
+++ b/src/components/reusable/table/table-head.scss
@@ -7,5 +7,6 @@
 :host([stickyheader]) {
   position: sticky;
   top: 0;
+  z-index: 1;
   background-color: white;
 }
